--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,10 @@
         </div>
         <div id="content-display" class="red">
             <!-- Content from scanned QR will be displayed here -->
-
-            
         </div>
+        </br>
+        <button onclick="moreInfo" class="" id="moreInfo">Plus d'information</button>
+        <button onclick="nextScan" class="" id="nextScan">Prochain scan</button>
     </main>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='./css/style.css') }}">
