--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
             <!-- Content from scanned QR will be displayed here -->
         </div>
         </br>
-        <button onclick="moreInfo" class="" id="moreInfo">Plus d'information</button>
-        <button onclick="nextScan" class="" id="nextScan">Prochain scan</button>
+        <button class="" id="moreInfo">Plus d'information</button>
+        <button class="" id="nextScan">Prochain scan</button>
     </main>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='./css/style.css') }}">
